--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/viewsdb
+spring.datasource.username=dbuser
+spring.datasource.password=dbpassword
+spring.jpa.hibernate.ddl-auto=update
 logging.file=logs/spring-boot-logging.log
 server.port= 8020
