--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
       <artifactId>log4j</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+    
+    <!-- Metrics -->
+    <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-core</artifactId>
+        <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
+    </dependency>
   </dependencies>
 
   <build>
