Add logging to Grafana

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=dbpassword
 spring.jpa.hibernate.ddl-auto=update
 logging.file=logs/spring-boot-logging.log
 server.port= 8020
+graphite.hostname=localhost
+graphite.port=2003
