--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
         <artifactId>metrics-core</artifactId>
         <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
     </dependency>
+    
+    <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-graphite</artifactId>
+        <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
+    </dependency>
+
   </dependencies>
 
   <build>
