--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <java.version>1.8</java.version>
     <docker.image.prefix>spring</docker.image.prefix>
     <log4j.version>1.2.17</log4j.version>
+    <hadoop.version>2.7.1</hadoop.version>
   </properties>
 
   <dependencies>
@@ -32,7 +33,7 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
-    <dependency>
+<!--     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
@@ -42,7 +43,7 @@
       <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
 
-    <dependency>
+ -->    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
@@ -110,6 +111,13 @@
         <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-graphite</artifactId>
         <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
+    </dependency>
+    
+    <!-- Hadoop -->
+    <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>${hadoop.version}</version>
     </dependency>
 
   </dependencies>
