--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/viewsdb
-spring.datasource.username=dbuser
-spring.datasource.password=dbpassword
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/viewsdb
+#spring.datasource.username=dbuser
+#spring.datasource.password=dbpassword
+#spring.jpa.hibernate.ddl-auto=update
 logging.file=logs/spring-boot-logging.log
 server.port= 8020
 graphite.hostname=localhost
 graphite.port=2003
+hdfs.uri=hdfs://54.227.163.200:9000
