Add Zipkin for tracing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port= 8020
 graphite.hostname=localhost
 graphite.port=2003
 hdfs.uri=hdfs://54.227.163.200:9000
+spring.zipkin.baseUrl=http://54.242.49.95:9411
+spring.sleuth.sampler.percentage=1.0
+spring.application.name=backend
