--- a/pom.xml
+++ b/pom.xml
@@ -71,12 +71,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-jcs-core</artifactId>
       <version>2.0</version>
@@ -113,6 +107,17 @@
         <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
     </dependency>
     
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+    </dependency>
+	 
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-sleuth</artifactId>
+    </dependency>
+	 
+
     <!-- Hadoop -->
     <dependency>
         <groupId>org.apache.hadoop</groupId>
@@ -133,8 +138,19 @@
             </exclusion>
           </exclusions>
       </dependency>
-
   </dependencies>
+
+  <dependencyManagement>
+      <dependencies>
+          <dependency>
+              <groupId>org.springframework.cloud</groupId>
+              <artifactId>spring-cloud-dependencies</artifactId>
+              <version>Camden.SR5</version>
+              <type>pom</type>
+              <scope>import</scope>
+          </dependency>
+      </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
