--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <java.version>1.8</java.version>
     <docker.image.prefix>spring</docker.image.prefix>
     <log4j.version>1.2.17</log4j.version>
-    <hadoop.version>2.7.1</hadoop.version>
+    <hadoop.version>2.6.0</hadoop.version>
   </properties>
 
   <dependencies>
@@ -107,7 +107,7 @@
         <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
     </dependency>
     
-    <dependency>
+<!--     <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-sleuth-zipkin</artifactId>
     </dependency>
@@ -116,7 +116,7 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-sleuth</artifactId>
     </dependency>
-	 
+	  -->
 
     <!-- Hadoop -->
     <dependency>
@@ -138,9 +138,10 @@
             </exclusion>
           </exclusions>
       </dependency>
+      
   </dependencies>
 
-  <dependencyManagement>
+<!--   <dependencyManagement>
       <dependencies>
           <dependency>
               <groupId>org.springframework.cloud</groupId>
@@ -150,7 +151,7 @@
               <scope>import</scope>
           </dependency>
       </dependencies>
-  </dependencyManagement>
+  </dependencyManagement> -->
 
   <build>
     <plugins>
