--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/viewsdb
-#spring.datasource.username=dbuser
-#spring.datasource.password=dbpassword
-#spring.jpa.hibernate.ddl-auto=update
-logging.file=logs/spring-boot-logging.log
 server.port= 8020
 graphite.hostname=localhost
 graphite.port=2003
 hdfs.uri=hdfs://54.227.163.200:9000
+hdfs.batch.size=1000
 spring.zipkin.baseUrl=http://54.242.49.95:9411
 spring.sleuth.sampler.percentage=1.0
 spring.application.name=backend
