--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.lab</groupId>
-  <artifactId>first</artifactId>
+  <artifactId>backend</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>lab-first</name>
+  <name>backend</name>
   <description>First Lab Project</description>
 
   <parent>
@@ -56,12 +56,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-rest</artifactId>
     </dependency>
-
-<!--     <dependency> -->
-<!--       <groupId>org.hsqldb</groupId> -->
-<!--       <artifactId>hsqldb</artifactId> -->
-<!--       <scope>runtime</scope> -->
-<!--     </dependency> -->
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
