Support load balancer changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 graphite.hostname=localhost
+graphite.metricname=view-request-instance-1
 graphite.port=2003
 hdfs.batch.size=10000
 hdfs.uri=hdfs://54.227.163.200:9000
