Add sharding for output

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ hdfs.uri=hdfs://54.227.163.200:9000
 server.port=8020
 spring.application.name=backend
 spring.zipkin.baseUrl=http://54.242.49.95:9411
+instance.id=1
